--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -11,6 +11,7 @@
   "buttons": {
     "save": "Guardar",
     "viewMonth": "Ver mes",
+    "backToHome": "Volver al inicio",
     "increase": "Aumentar",
     "decrease": "Disminuir",
     "changeStep": "Cambiar paso"
@@ -41,5 +42,10 @@
     "10": "Octubre",
     "11": "Noviembre",
     "12": "Diciembre"
+  },
+  "month": {
+    "summary": "Resumen del mes",
+    "totalExpenses": "Total gastos",
+    "averagePerDay": "Promedio por día"
   }
 }
