Edit month head

--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -46,6 +46,7 @@
   "month": {
     "summary": "Resumen del mes",
     "totalExpenses": "Total gastos",
-    "averagePerDay": "Promedio por día"
+    "totalIncome": "Total ingresos",
+    "balance": "Balance total"
   }
 }
