--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -78,5 +78,11 @@
     "selectLanguage": "Select language",
     "spanish": "Spanish",
     "english": "English"
+  },
+  "currency": {
+    "selectCurrency": "Select currency",
+    "euro": "Euro (EUR)",
+    "dollar": "Dollar (USD)",
+    "pound": "Pound (GBP)"
   }
 }
