Add "Balance at end of month" at breakdown page

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -148,6 +148,10 @@
     "yearlyByDescription": "By description (Yearly)",
     "yearSummary": "Year summary",
     "yearlySummary": "Yearly summary",
+    "endOfMonth": "Balance at end of month",
+    "endOfYear": "Balance at end of year",
+    "totalBalanceEndMonth": "Total balance at last day of month",
+    "totalBalanceEndYear": "Total balance at last day of year",
     "loading": "Loading breakdown...",
     "noData": "No data available",
     "transactions": "transactions",
