--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -147,7 +147,11 @@
     "yearlyByCategory": "Por categoría (Anual)",
     "yearlyByDescription": "Por descripción (Anual)",
     "yearSummary": "Resumen del año",
-    "yearlySummary": "Yearly summary",
+    "yearlySummary": "Resumen anual",
+    "endOfMonth": "Balance al final del mes",
+    "endOfYear": "Balance al final del año",
+    "totalBalanceEndMonth": "Balance total al último día del mes",
+    "totalBalanceEndYear": "Balance total al último día del año",
     "loading": "Cargando desglose...",
     "noData": "No hay datos disponibles",
     "transactions": "transacciones",
