Home modal create, avoid accidentaly multiple "save" btn click and show toast when is saved

--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -10,6 +10,7 @@
   },
   "buttons": {
     "save": "Guardar",
+    "saving": "Guardando...",
     "viewMonth": "Ver mes",
     "backToHome": "Volver al inicio",
     "increase": "Aumentar",
