--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -10,6 +10,7 @@
   },
   "buttons": {
     "save": "Save",
+    "saving": "Saving...",
     "viewMonth": "View month",
     "backToHome": "Back to home",
     "increase": "Increase",
